--- a/src/index.scss
+++ b/src/index.scss
@@ -8,6 +8,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  // background: #c7d0db;
 }
 
 code {
